--- a/trunk/perldoc/ko/perl/5.10/perlsec.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlsec.pod
@@ -709,20 +709,19 @@ doing something it shouldn't.
 
 =end original
 
-Perl は、setuid や setgid されたプログラムから安全にファイルやパイプを
-オープンする方法を提供しています。
-これは単に、汚れ仕事をするための制限された権利を持った子プロセスを
-生成するというものです。
-まず最初に、パイプによって親プロセスと子プロセスとを繋ぐ構文の
-特別な C<open> を使って子プロセスを fork します。
-このとき、子プロセスはその ID セットをリセットしさらにその他の
-プロセス毎の属性をリセットして、オリジナルの、
-もしくは安全な既知の値へと戻します。
-それからもはや何の特別のパーミッションも持っていない子プロセスが
-C<open> などのシステムコールを実行します。
-ファイルやパイプは親プロセスよりも低い特権の元で実行されている
-子プロセスでオープンされたので、すべきではないようなことを
-ごまかしておこなうことはできません。
+Perl 은, setuid 나 setgid 된 프로그램에서 안전하게 파일이나 파이프를 
+여는 방법을 제공하고 있습니다.
+이것은 단순히, 오염된 일을 하기 위해 제한된 권리를 가진 자식 프로세스를
+생성하는 것입니다.
+우선 처음에, 파이프에 의해 부모 프로세스와 자식 프로세스를 연결하는 구문의
+특별한 C<open> 을 사용해서 자식 프로세스를 fork 합니다.
+이 때, 자식 프로세스는 그 ID 세트를 리셋하고 그 외의
+프로세스마다의 속성을 리셋해서, 오리지날 혹은 안전한 기존의 값으로 반환합니다.
+그리고 더는 아무런 특별 퍼미션도 가지고 있지 않은 아들 프로세스가 
+C<open> 등의 시스템 콜을 실행합니다.
+파일이나 파이프는 부모 프로세스 보다도 낮은 특권으로 실행되는
+자식 프로세스에서 오픈되었기 때문에, 해야할 것이 아닌 것을 
+무리해서 수행할 수는 없습니다.
 
 =begin original
 
@@ -733,11 +732,11 @@ never call the shell at all.
 
 =end original
 
-以下に示すのは、安全に逆クォートを行う方法です。
-どのようにして C<exec> はシェルが展開するかもしれない文字列を伴って
-呼び出されないようになっているかに注目してください。
-これはシェルをエスケープする目的には最善の方法というわけではありません。
-これは単に、シェルを呼び出さないというだけです。
+아래에 보이는 것은, 안전하게 역 인용을 수행하는 방법입니다.
+어떻게 해서 C<exec> 는 셸이 전개할지도 모르는 문자열 따라서
+호출되지 않게 되어 있는 가에 주목해 주세요.
+이것은 셸을 이스케이프하는 목적에는 최선의 방법은 아닙니다.
+이것은 단순히, 셸을 호출하지 않도록 하는 것 뿐입니다.
 
         use English '-no_match_vars';
         die "Can't fork: $!" unless defined($pid = open(KID, "-|"));
@@ -772,8 +771,8 @@ you can use C<readdir> instead.
 
 =end original
 
-C<readdir> を代わりに使うことができるにしても、同様の戦略が C<glob> を
-通じたワイルドカードの展開でも有効です。
+C<readdir> 을 대신해서 사용할 수 있어도, 같은 전략이 C<glob> 를
+통한 와일드 카드의 전개에서도 유효합니다.
 
 =begin original
 
@@ -785,12 +784,11 @@ programs launched on someone else's behalf, like CGI programs.
 
 =end original
 
-汚染検査は、農場をくれてやる (give away the farm) ためのプログラムを
-記述することを自分自身に任せないということではなくて、
-最終的にそれをつかって良からぬなにかを行おうとしているだれかを
-信頼する必要がないというときに最も便利なものです。
-これは、set-id プログラムや、CGI プログラムのように誰かに
-すり変わって起動されるようなプログラムに便利なセキュリティチェックです。
+오염검사는, 제대로 된 프로그램을 기술하는 것을 자기 자신에게 맡기는 것이 아닌,
+최종적으로 그것을 사용해서 뭔가를 수행하려고 하는 누군가를 
+신뢰할 필요가 없을 때에는 가장 편리한 것입니다.
+이것은, set-id 프로그램이나, CGI 프로그램같이 누군가에 바뀌어져서
+기동될 가능성이 있는 프로그램에 편리한 보안 체크입니다.
 
 =begin original
 
@@ -804,19 +802,17 @@ are trapped and namespace access is carefully controlled.
 
 =end original
 
-しかしながら、これは良からぬなにかを行おうはしないコードの作者を
-信用しないということとは明らかに違います。
-これは誰かが、プログラムをあなたが今まで見たことのないようにいじって
-「ほら、これを実行して」と言わせるようなときに必要な種類の信用です。
-この種の安全性のために、Perl の配布パッケージに標準で含まれている
-Safe モジュールをチェックしてみてください。
-このモジュールはプログラマーがすべてのシステム操作をトラップし、
-名前空間のアクセスが注意深く制御されるような
-特別な仕切り(compartment)をセットアップすることを許します。
+하지만, 이것은 좋지 않은 뭔가를 실행하려고는 하지 않는 코드의 작성자를 
+신용하지 않는 다는 것과는 명백하게 다릅니다.
+이것은 누군가가, 프로그램을 당신이 지금까지 본 적이 없게 만져서
+"이봐, 이것을 실행해"라고 라고 말하게 할 때에 필요한 종류의 신용입니다.
+이런 종류의 안전성을 위해, Perl 의 배포 패키지에 표준으로 포함되어 있는
+Safe 모듈을 체크해 보세요. 이 모듈은 프로그래머가 모든 시스템 조작을 트랩하고,
+네임스페이스 접근이 주의깊게 제한될 특별한 부분의 설정을 허락합니다.
 
 =head2 Security Bugs
 
-(セキュリティバグ)
+(보안 버그)
 
 =begin original
 
@@ -830,14 +826,14 @@ changed, especially if you have symbolic links on your system.
 
 =end original
 
-スクリプトと同じくらい柔軟に特別な権限をシステムに与えて
-しまう類の明白な問題の他に、多くの UNIX では、set-id されたスクリプトは
-本質的に安全でない権利を最初から持っています。
-その問題とは、カーネルにおける競合条件です。
-インタープリターを実行するためにカーネルがファイルをオープンするのと、
-(set-id された)インタープリターが起動してファイルを解釈するために
-再度オープンするその間に、問題のファイルが変更されるかもしれません。
-特に、使っているシステムがシンボリックリンクをサポートしている場合には。
+스크립트와 같은 유연하게 특별한 권한을 시스템에게 줘버리는 것 같은 
+명백한 문제 이외에, 많은 UNIX 에서는, set-id 된 스크립트는 
+본질적으로 안전하지 ㅇ낳은 권리를 처음부터 가지고 있습니다.
+그 문제는, 커널에 의한 경합조건입니다.
+인터프리터를 실행하기 위해 커널이 파일을 여는 것과, 
+(set-id 된) 인터프리터가 기동하고 파일을 해석하기 위해 
+다시금 열려는 그 사이에, 문제의 파일이 변경될지도 모릅니다.
+특히, 사용하고 있는 시스템이 심볼릭링크를 지원하고 있는 경우에는 말이죠.
 
 =begin original
 
@@ -852,17 +848,16 @@ invoked for you if it's needed.
 
 =end original
 
-幸運なことに、このカーネル“仕様”は使用禁止にできることもあります。
-残念なことに禁止には二つのやり方があります。
-システムは set-id ビットがセットされているスクリプトを単純に禁止することが
-できますが、このときはなにもできません。
-もう一つ、スクリプトに付けられた set-id ビットを単純に
-無視してしまうことができます。
-後者の場合、Perl スクリプトにある setuid/gid ビットが無用なものではないと
-Perl が認識したときに、Perl は setuid や setgid の仕掛けを
-模倣(emulate)することができます。
-この機能は、必要とされるときに自動的に起動される F<suidperl> と呼ばれる
-特別な実行ファイルを通じて行なわれます。
+다행인 것은 이 커널 "스펙"은 사용금지로 할 수도 있습니다.
+아쉬운 것은 금지하기 위해서는 두가지 방법이 있습니다.
+시스템은 set-id 비트가 설정되어 있는 스크립트를 단순하게 금지하는 것이
+가능하지만, 이 때는 아무것도 할 수 없습니다.
+또 하나는, 스크립트에 붙인 set-id 비트를 단순히 무시해버리는 것이 가능합니다.
+후자의 경우, Perl 스크립트에 있는 setuid/gid 비트가 쓸모없는 것이 아니면
+Perl 이 인식했을 때에, Perl 은 setuid 나 setgid 의 일을 
+모방(emulate) 할 수가 있습니다.
+이 기능은, 필요로 할 때에 자동적으로 기동되는 F<suidperl> 이라고 불리는 
+특별한 실행 파일을 통해 수행됩니다.
 
 =begin original
 
@@ -876,15 +871,13 @@ in C:
 
 =end original
 
-しかし、kernel set-id スクリプト機能が禁止されていなければ、Perl は
-あなたの set-id スクリプトは安全ではないとやかましく主張することでしょう。
-このとき、あなたは kernel set-id スクリプト機能を禁止するか、
-スクリプトを C のラッパーで包んでしまうかのいずれかが必要です。
-C ラッパーは、Perl プログラムを呼び出すことを除いては
-何もしないプログラムです。
-コンパイルされたプログラムは set-id されたスクリプトに関する
-カーネルのバグには影響されません。
-次の例は、C で書いた単純なラッパーです。
+그러나, kernel set-id 스크립트 기능이 금지되어 있지 않다면, Perl 은 
+당신의 set-id 스크립트는 안전하지 않다고 끈질기게 주장할 겁니다.
+이 때, 당신은 kernel set-id 스크립트 기능을 금지할 것인가,
+스크립트를 C 의 래퍼로 싸버리든가 해야합니다.
+C 래퍼는, Perl 프로그램 호출하는 것을 빼고는 아무것도 하지 않는 프로그램입니다.
+컴파일된 프로그램은 set-id 된 스크립트에 관한 커널의 버그에는
+영향을 받지 않습니다. 다음의 예제는 C 로 쓴 단순한 래퍼입니다.
 
     #define REAL_PATH "/path/to/script"
     main(ac, av)
@@ -900,8 +893,8 @@ than your script setuid or setgid.
 
 =end original
 
-このラッパーをコンパイルして実行ファイルにし、スクリプトではなく
-I<この実行ファイル> を setuid したり setgid します。
+이 래퍼를 컴파일해서 실행파일로 해, 스크립트가 아닌
+I<이 실행 파일> 을 setuid 하거나 setgid 합니다.
 
 =begin original
 
@@ -918,20 +911,18 @@ SysVr4 and BSD 4.4 use this approach to avoid the kernel race condition.
 
 =end original
 
-近年、ベンダーはこのようなセキュリティバグに対する耐性を備えたシステムを
-提供しはじめました。
-そのようなシステムでは、インタープリターを起動するためにカーネルに
-set-id スクリプトが渡されたときにそのパス名をそのまま使うのではなく、
-代わりに I</dev/fd/3> を渡します。
-これはスクリプトでは、あらかじめオープンされている特別なファイルですから、
-邪悪なスクリプトをこじ入れるためにつかうことはできません。
-こういったシステムにおいては、Perl は
-C<-DSETUID_SCRIPTS_ARE_SECURE_NOW> を付加してコンパイルすべきでしょう。
-Perl を構築する F<Configrue> プログラムは自分自身でこれを
-見つけ出そうとするので、あなたが特別な何かをしなければならない、
-ということはありあません。
-SysVr4 の最近のリリースのほとんどや BSD4.4 は
-このアプローチをカーネルの競合条件を避けるために使っています。
+최근, 벤더는 이런 보안 버그에 대한 내성을 갖춘 시스템을 제공하기 시작했습니다.
+이런 시스템에서는, 인터프리터ㄹ 기동하기 위해 커널에 set-id 스크립트가 
+넘겨졌을 때에 그 경로 이름을 그대로 사용하는 것이 아니라,
+대신에 I</dev/fd/3> 를 넘겨줍니다.
+이것은 스크립트에서는, 다시금 열려져 있는 특별한 파일이기 때문에,
+사악한 스크립트를 넣기 위해 사용할 수는 없습니다.
+이런 시스템에서는, Perl 은 
+C<-DSETUID_SCRIPTS_ARE_SECURE_NOW> 를 부가해서 컴파일해야할 것입니다. 
+Perl 을 구축하는 F<configure> 프로그램은 자기자신이 이것을 
+발견하려고 하기 때문에, 당신이 특별한 뭔가를 하지 않으면 안되는 것은 아닙니다.
+SysVr4 의 최근의 릴리즈의 대부분이나 BSD4.4 는
+이 어프로치를 커널의 경합조건을 피하기 위해 사용하고 있습니다.
 
 =begin original
 
@@ -940,12 +931,12 @@ introduce a security hole.
 
 =end original
 
-リリース 5.6.1 以前の Perl では、F<suidperl> にあったバグによって、
-セキュリティホールが持ち込まれる可能性がありました。
+릴리즈 5.6.1 이전의 Perl 에서는, F<suidperl> 에 있었던 버그에 의해,
+보안 결함이 포함되어 있을 가능성이 있었습니다.
 
 =head2 Protecting Your Programs
 
-(あなたのプログラムを守る)
+(당신의 프로그램을 지키기)
 
 =begin original
 
@@ -954,8 +945,8 @@ with varying levels of "security".
 
 =end original
 
-ここで挙げるのは、あなたの Perl プログラムのソースコードをさまざまな
-“セキュリティ”のレベルで隠す方法です。
+여기에서 말하는 것은, 당신의 Perl 프로그램의 소스코드를 여러 가지
+"보안"의 레에서 숨기는 방법입니다.
 
 =begin original
 
@@ -968,14 +959,13 @@ people on your local system only see your source.
 
 =end original
 
-しかしまず最初にいっておきますが、ソースコードの読み込み権限を
-落とすことは B<できません>。
-なぜなら、ソースコードは、コンパイルやインタープリットするために
-読めるようになっていなければならないからです(これは、CGI スクリプトのソースが
-web の利用者から見ることができないというのとは違います)。
-このため、パーミッションは 0755 レベルにしておかなければならないのです。
-これによってあなたのローカルシステム上のユーザーはあなたのソースを
-見ることだけになります。
+하지만 우선, 처음에, 소스코드의 읽기 권한을 없애는 것은 B<불가능합니다>.
+왜냐면, 소스코드는, 컴파일이나 인터프리트 하기 위해 읽을 수 있도록 
+되어 있지 않으면 안되기 때문입니다(이것은, CGI 스크립트의 소스를
+Web 의 이용자가 볼수 없는 것과는 다릅니다).
+이 때문에, 퍼미션은 0755 레벨로 해두지 않으면 안되는 것입니다.
+이에 의해서 당신의 로컬 시스템 상의 유저는 당신의 소스를 
+보는 것만 가능합니다.
 
 =begin original
 
@@ -988,14 +978,12 @@ instead of fixing them, is little security indeed.
 
 =end original
 
-一部の人達はこれをセキュリティ上の問題であると考えています。
-あなたのプログラムが安全でないことを行っていて、
-他人がそういったセキュリティの隙間をこじ開ける方法を知らないことに
-頼っているのなら、それは安全ではないのです。
-これはある人が安全でないことがらを見つけだし、
-ソースを見ることなしにそれをこじ開けることの要因となります。
-明快さを通したセキュリティはバグを直すのではなく隠すことに比べれば、
-セキュリティをほんの少しだけしか傷つけません。
+Some people mistakenly regard this as a security problem.  If your program does
+insecure things, and relies on people not knowing how to exploit those 
+insecurities, it is not secure.  It is often possible for someone to
+determine the insecure things and exploit them without viewing the
+source.  Security through obscurity, the name for hiding your bugs
+instead of fixing them, is little security indeed. <TBT>
 
 =begin original
 
@@ -1011,18 +999,17 @@ language, not just Perl).
 
 =end original
 
-ソースフィルター(CPAN にある Filter::*,
-or Filter::Util::Call and Filter::Simple since Perl 5.8)
-を通して暗号化しようと
-することはできますが、クラッカーがそれを複号化することは可能でしょう。
-先に説明したバイトコードコンパイラーとインタープリターを使うことも
-できますが、クラッカーはそれを逆コンパイルすることができるかもしれません。
-ネイティブコードコンパイラーを使おうとしても、クラッカーはそれを
-逆アセンブルできるかもしれません。
-こういったことは、他人があなたの
-プログラムを手に入れようとすることを難しくしたりしますが、
-プログラムを決定的に隠すことは誰にもできないのです(このことは、
-Perl に限らずすべての言語にあてはまります)。
+소스필터(Perl 5.8부터 CPAN 에 있는 Filter::*, 
+, Filter::Util::Call and Filter::Simple)를 통해서 암호화하고 하는 것은 
+가능하지만, 크랙커가 그것을 복호화하는 것은 가능할 겁니다.
+우선, 설명한 바이트코드 컴파일러와 인터프리터를 사용하는 것도 
+가능하지만, 크랙커는 그것을 역 컴파일 하는 것이 가능할지도 모릅니다.
+네이티브 코드 컴파일러를 사ㅇ하려고 해도, 크랙커는 그것을 
+역 어셈블 할 수 있을 지도 모릅니다.
+이런 것은, 다른 사람이 당신의 프로그램을 손에 넣으려고 하는 것을 
+어렵게 하기도 하지만, 프로그램을 결정적으로 감추는 것은 
+누구도 할 수 없는 것입니다(이것은, Perl 에 한정되지 않고, 모든 언어에 
+해당됩니다).
 
 =begin original
 
@@ -1036,15 +1023,14 @@ stand up in court.
 
 =end original
 
-他人があなたのプログラムから受ける利益について気にしているのであれば、
-制限つきライセンスがあなたに法的な安全を与えるでしょう。
-あなたのソフトウェアのライセンスに、“本ソフトウェアは XYZ Corp.による、
-公表されていない独占的ソフトウェアです。
-あなたが使用するために
-これにアクセスすることは許可されておらず云々”のような脅し文句を
-付けておきます。
-あなたのライセンスが確実に有効なものとなるように、
-弁護士と相談したほうが良いでしょう。
+다른사람이 당신의 프로그램으로부터 받은 이익에 대해 신경쓰고 있다면, 
+제한이 붙은 라이센스가 당신의 법적인 안전을 부여할 겁니다.
+당신의 소프트웨어의 라이센스에, "이 소프트웨어는 XYZ Corp. 에 의해,
+공표되지 않은 독점적 소프트웨어입니다. 당신이 사용하기 위해
+이것에 접근하는 것은 허가되어 있지 않습니다" 같은 문구를 
+붙여 둡니다. 
+당신의 라이센스가 확실하게 유효한 것이 되도록, 변호사와 상담하는 편이
+좋을 것입니다.
 
 =head2 Unicode
 
@@ -1057,11 +1043,11 @@ of Unicode"> for security implications in particular.
 
 =end original
 
-Unicode は新しくて複雑な技術で、ある種のセキュリティの罠を簡単に
-見落としてしまいます。
-概要については L<perluniintro> を、詳細については L<perlunicode> を、
-そして特にセキュリティ実装については L<perlunicode/"Security Implications
-of Unicode"> を参照してください。
+Unicode 는 새롭고 복잡한 기술로, 어떤 종류의 보안의 함정을 간단하게 
+무시해버립니다.
+개요에 대해서는 L<perluniintro> 를, 자세한 내용에 대해서는 <perlunicode>를
+그리고, 특히 보안 구성에 대해서는 
+L<perlunicode/"Security Implications of Unicode"> 를 참조해주세요.
 
 =head2 Algorithmic Complexity Attacks
 
@@ -1074,10 +1060,10 @@ I<Denial of Service> (DoS) attacks.
 
 =end original
 
-Perl の実装で使われているある種の内部アルゴリズムは、多くの時間や
-空間を消費するように注意深く選択された入力によって攻撃可能です。
-これにより I<サービス拒否(Denial of Service)> (DoS) 攻撃と呼ばれている
-ものを引き起こすことができます。
+Perl 의 구성에서 사용되고 있는 어떤 종류의 내부 알고리즘은 많은 시간이나 
+공간을 소비하도록 주의깊게 선택입 입력에 의해 공격가능합니다. 
+이것에 의해 <서비스거부(Denail of Service)> (DoS) 공격이라고 불리는 
+것을 일으킬 수가 있습니다. 
 
 =over 4
 
@@ -1241,12 +1227,4 @@ L<perlrun> for its description of cleaning up environment variables.
 
 =end original
 
-L<perlrun> には環境変数を洗浄する方法が記述されています。
-
-=begin meta
-
-Translate: KIMURA Koichi (5.005_03)
-Update: Kentaro Shirakata <argrath@ub32.org> (5.6.1-)
-
-=end meta
-
+L<perlrun> 에는 환경변수를 깨끗하게 하는 방법이 기술되어 있습니다.
